--- a/ondemand/themes/hpc-coop/styles.css
+++ b/ondemand/themes/hpc-coop/styles.css
@@ -5,7 +5,7 @@
 }
 
 .theme-navbar {
-  background-color: #6CACE4;
+  background-color: #fff;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   color: #333;
   font-size: 13px;
@@ -19,12 +19,12 @@
   display: inline-block;
   height: 100%;
   overflow: hidden;
-  padding: 10px 15px;
-  width: 500px;
+  padding: 5px 0px;
 }
 
 .theme-navbar__logo {
-  height: 100%;
+  max-height: 70px;
+  max-width: 997px;
   width: 100%;
 }
 
