update ood tutorial
* puts every tutorial into a collapsible menu
* Adds a 'walkthrough' tutorial with gifs
* updates the configurations for some 3.0 features

--- a/ondemand/jupyter/submit.yml.erb
+++ b/ondemand/jupyter/submit.yml.erb
@@ -24,8 +24,8 @@ batch_connect:
 # Configure the job script submission parameters for the batch job here
 # @see http://www.rubydoc.info/gems/ood_core/OodCore/Job/Script
 #
-#script:
-#  queue_name: "queue1"
-#  accounting_id: "account1"
-#  email_on_started: true
-#  native: # ... array of command line arguments ...
+---
+script:
+  native:
+    - "--mem"
+    - "<%= memory %>M"
